tests/ui/g-route-nested-policy-not-promoted.stderr
error[E0080]: evaluation panicked: route scope recorded a controller policy annotation on only one arm
 --> src/global/program/source.rs
  |
  |         validate_all_roles(&image, source);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::global::program::source::ValidatedProgram::<hibana::global::steps::RouteSteps<hibana::global::steps::SeqSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<161>, (), hibana::integration::cap::control::LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::RouteSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<161>, (), hibana::integration::cap::control::LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<162>, (), hibana::integration::cap::control::LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<162>, (), hibana::integration::cap::control::LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>::PROGRAM_IMAGE` failed inside this call
  |
note: inside `hibana::global::compiled::lowering::seal::validate_all_roles`
 --> src/global/compiled/lowering/seal.rs
  |
  |     ProjectionSeal::<0>::validate_compiled_layout(&view, eff_list);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_compiled_layout`
 --> src/global/compiled/lowering/seal.rs
  |
  |         Self::validate_route_projection_guarantees(view, eff_list);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_projection_guarantees`
 --> src/global/compiled/lowering/seal.rs
  |
  | /                 Self::validate_route_scope(
  | |                     view,
  | |                     eff_list,
  | |                     scope_markers,
... |
  | |                     marker.linger,
  | |                 );
  | |_________________^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_scope`
 --> src/global/compiled/lowering/seal.rs
  |
  | /         Self::validate_decision_policy_consistency(
  | |             view,
  | |             eff_list,
  | |             arm0_enter_marker_idx,
... |
  | |             arm1_end,
  | |         );
  | |_________^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_decision_policy_consistency`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global/compiled/lowering/seal.rs
  |
  |                 panic!("route scope recorded a controller policy annotation on only one arm");
  |                 ----------------------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |     &ValidatedProgram::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_typed_program::<0, hibana::global::steps::RouteSteps<hibana::global::steps::SeqSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<161>, (), LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::RouteSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<161>, (), LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<162>, (), LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<162>, (), LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>`
 --> src/global/role_program/program.rs
  |
  |     project_typed_program(program)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
